# ai-horoscop

./: .gitignore  Dockerfile  README.md  docker-compose.yml  gemini_models.json  pyproject.toml
app/: config.py  main.py
app/models/: __init__.py  horoscop.py
app/routers/: __init__.py  horoscop.py  status.py
app/static/: app.js  index.html  styles.css
app/utils/: debug_horoscope.json  helper.py  horoscope_process.py  template_process.py
app/utils/database/: __init__.py  database.py
app/utils/templates/: basic_template.html
