[project]
name = "ai-horoscop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi[standard]>=0.116.1",
    "langchain>=1.0.5",
    "langgraph>=0.6.6",
    "load-dotenv>=0.1.0",
    "loguru>=0.7.3",
    "motor>=3.7.1",
    "motor-types>=1.0.0b4",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
]
